<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_action_action_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_action_action_grade"
        android:title="@string/nav_favorite" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_action_action_visibility"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_action_action_settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_action_action_info_outline"
        android:title="@string/about" />
</menu>