<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#e0e0e0"
    android:fitsSystemWindows="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>
    <RelativeLayout
        style="@style/option_item_rl"
        android:layout_marginTop="20dip" >

        <TextView
            style="@style/option_item_text_parent"
            android:text="@string/load_img_in_wifi_mode"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_loading_img"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/actionbar_line" />

    <RelativeLayout
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text_parent"
            android:text="@string/cache_clear"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/actionbar_line" />

    <RelativeLayout
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text_parent"
            android:text="@string/slide_back"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/actionbar_line" />
    <RelativeLayout
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text_parent"
            android:text="@string/read_not_history"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


    <RelativeLayout
        style="@style/option_item_rl"
        android:layout_marginTop="20dip" >

        <TextView
            style="@style/option_item_text_parent"
            android:text="@string/night_mode"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>